Fix bug with logo css on mobile

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -159,6 +159,25 @@ ul li a {
         margin-right: 0;
     }
 
+    .current-page{
+        color: var(--secondary-color);
+    }
+
+    .current-page:hover{
+        color: var(--secondary-color);
+    }
+
+    a{
+        border-radius: 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    #logo{
+        border-radius: 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     .current-page {
         background: transparent;
     }
